src/css/index.css
body {
  margin: 8px;
  line-height: 1.1em;
}

#source {
  padding: 8px;
  width: 96%;
  height: 600px;
}

#result {
  padding: 8px;
  width: 98%;
}

#format {
  margin-top: 8px;
  width: 95%;
}

.source-code {
  width: 100%;
  height: 200px;
}

.operator {
  color: #44bb44;
}

.keyword {
  color: blue;
}

.cell {
  color: #ddaa00;
}

.num {
  color: red;
}

.str {
  color: green;
}

.ref {
  color: #ff00ff;
}

.other {
  color: gray;
}

.folder {
  color: lightgray;
}

.unfold {
  color: red;
}

.fold-tooltip {
  font-size: 9px;
}

